css/style.css
/********FONTS********/
@font-face {
    font-family: 'madness_hyperactiveregular';
    src: url('madness_hyperactive-webfont.woff2') format('woff2'),
        url('madness_hyperactive-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@import url('https://fonts.googleapis.com/css?family=Lato');

/********MAIN********/
::-webkit-scrollbar{
    display: none;
}

body, html {
    height: 100%;
    width: 100%;
    line-height: 1.8;
}


body {
    font-family: 'Lato', sans-serif;
    margin-bottom: 0;
}

h1, h2, h3, h4, h5{
    font-family: 'madness_hyperactiveregular', sans-serif;
}

nav {
    font-family: 'madness_hyperactiveregular', sans-serif;
    font-size: 40px;
    margin: 0px;
    z-index: 99999999;
}

audio { 
    display:none;
}

nav .w3-bar a{
    transition: all 0.5s ease-in-out;
}

.sectionsAfterVideo{
    position: relative;
    top: 100%;
}

footer .w3-cell-row .w3-cell {
    min-height: 100%;
    transition: 1s all ease;
    padding: 10px;
}

footer img{
    max-width: 0%;
    max-height: 155px;
    display: block;
    margin: 0 auto;
    transition: 1s all ease;
}

/********FULL SCREEN STUFF********/
.video-container {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100%; 
    border-radius: 5px;
    background-attachment: scroll;
    overflow: visible;

    z-index: -1;

    opacity: 1;
}

.video-container video {
    min-width: 100%;
    min-height: 100%;

    /* Setting width & height to auto prevents the browser from stretching or squishing the video */
    width: auto;
    height: auto;

    /* Center the video */
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    z-index: -100;
}

.video-container .overlay {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 87.81px;
    left: 0px;
    z-index: 2;
    background: white;
    opacity: 0.65;
}


.fs-bg{
    height: 100%;
    width: 100%;
}

.centered-text{
    text-align: center;
}

/********PARALLAXING********/
/* Create a Parallax Effect */
.parallax {
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* Full Screen Image Background */
.parallax-fs {
    background-image: url('../img/sp00ked.jpg');
    min-height: 100vh;
}

/* Second image (Portfolio) */
.bgimg-2 {
    background-image: url("/w3images/parallax2.jpg");
    min-height: 400px;
}

/* Third image (Contact) */
.bgimg-3 {
    background-image: url("/w3images/parallax3.jpg");
    min-height: 400px;
}

.w3-wide {letter-spacing: 10px;}
.w3-hover-opacity {cursor: pointer;}

/* Turn off parallax scrolling for tablets and phones */
@media only screen and (max-device-width: 1024px) {
    .bgimg-1, .bgimg-2, .bgimg-3 {
        background-attachment: scroll;
    }
}

/********NAVIGATION********/
.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    overflow-x: hidden;
    transition: 0.5s all;
    padding-top: 60px;
}

.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 36px;
    display: block;
    transition: 0.5s all;
    text-align: center;
}

.sidenav a:hover {
    color: #f1f1f1;
    font-size: 40px;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
    transition: 0.75s all ease-in-out;
}

/********SECTION-SPECIFIC STYLES********/
#section-1 {
    background-color: #ffcf10;
    background-image: url('../img/cuphead-and-mugman.png');
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    height: 100vh;
    width: 100vw;
    overflow: auto;
    margin-bottom: 0;
    transition: 1s background ease-in-out;
}

#title-img {
    max-width: 110%;
    width: 110%;
    opacity: 0;
    transition: 5s all ease-in-out;
}

#section-1 .w3-display-middle .w3-container{
    max-width: 100%;
    margin: 0 auto;
}

#section-2 {
}


/********MEDIA QUERIES********/

@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}

